# gameOfLive

./: CMakeLists.txt  main.cpp
src/: GameBoard.cpp  GameBoard.hpp  GameWindow.cpp  GameWindow.hpp  MainWindow.cpp  MainWindow.hpp
